lib/src/compiler/tests/testdata/errors/44.out
error[E114]: no matching patterns
 --> line:3:13
  |
3 |     all of ($a*)
  |             ^^^ there's no pattern in this set
  |
  = note: `$a*` doesn't match any pattern identifier